fix header width, svg icon safari

--- a/landingpage/src/assets/sass/views/home/_forwho.sass
+++ b/landingpage/src/assets/sass/views/home/_forwho.sass
@@ -17,9 +17,12 @@
         align-items: center
         .icon-arrow
           width: 32px
+          height: 32px
           display: inline-flex
           margin-right: 10px
           svg
+            width: 32px
+            height: 32px
             .circle
               fill: #5659db!important
 
